# itybity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: cd.yml  ci.yml
src/: alloc.rs  array.rs  bool.rs  int.rs  lib.rs  rayon.rs  slice.rs  str.rs  traits.rs  uint.rs
