[package]
name = "itybity"
version = "0.2.1"
edition = "2021"
authors = ["sinui0"]
description = "An itty bitty crate providing bit iterators and bit iterator accessories."
repository = "https://github.com/sinui0/itybity"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "encoding", "no-std::no-alloc"]
keywords = ["bit", "iterator", "bitvec", "bitstring", "convert"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
rayon = ["std", "dep:rayon"]

[dependencies]
rayon = { version = "1.7", optional = true }

[dev-dependencies]
rstest = "0.18"
